// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/mailchimp SendEmail sends email with attachements 1`] = `
Ok {
  "value": Object {
    "messageId": "e442e6562ca74039afa4ca72e649a3b6",
  },
}
`;

exports[`communication/send-email/mailchimp SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "830c905c7c564920898466fdd2d801a6",
  },
}
`;

exports[`communication/send-email/mailchimp SendEmail when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Validation error: {\\\\\\"message\\\\\\":{\\\\\\"from_email\\\\\\":\\\\\\"An email address must contain a single @\\\\\\"}}\\"
}
AST Path: definitions[0].statements[4].responseHandlers[1].statements[1]
Original Map Location: Line 62, column 7",
}
`;
